	* lib/tcbfuncs.c: Avoid integer to char conversions.
	* lib/tcbfuncs.c: Include prototypes.h for the definition of Prog.
	* lib/tcbfuncs.c: Removed dead return.
	* lib/tcbfuncs.c: move_dir() and shadowtcb_move() need a non NULL
	stored_tcb_user.
	* lib/tcbfuncs.c: Avoid implicit int to mode_t conversion.
	* lib/tcbfuncs.c: Added brackets and parenthesis.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/commonio.c: Ignore the return value of close when a
	failure is reported.

2010-03-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/faillog.8.xml: Document the behavior in display mode of the
	-a option.
	* NEWS, man/faillog.8.xml, src/faillog.c: Extend the -a option to
	the non-display mode. This changes the default behavior of the -l,
	-m, -r, -t options when -a is not specified (restrict to existing
	users).

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml, man/login.defs.5.xml, man/pwck.8.xml,
	man/pwconv.8.xml, man/useradd.8.xml, man/userdel.8.xml,
	man/usermod.8.xml, man/vipw.8.xml: Document the usage of the
	TCB_AUTH_GROUP, TCB_SYMLINKS, and USE_TCB configuration
	parameters.
	* man/pwconv.8.xml, man/pwck.8.xml: Document the behavior when
	USE_TCB is enabled.

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* po/POTFILES.in, lib/tcbfuncs.c: Add more strings for
	translation.
	* lib/tcbfuncs.c: Indicate the name of the program in error
	messages. Avoid perror.
	* src/useradd.c: Re-indent.
	* src/useradd.c: Add more strings for translation. Indicate the
	name of the program in error messages.
	* src/userdel.c: Re-indent.
	* src/userdel.c: Add more strings for translation. Indicate the
	name of the program in error messages.

2010-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: user_newname and user_newid cannot be used to